--- a/about/index.html
+++ b/about/index.html
@@ -11,8 +11,8 @@
 ">
 
   <link rel="stylesheet" href="/css/main.css">
-  <link rel="canonical" href="http://global-asp.github.io//about/">
-  <link rel="alternate" type="application/rss+xml" title="Global African Storybook Project" href="http://global-asp.github.io//feed.xml" />
+  <link rel="canonical" href="https://global-asp.github.io//about/">
+  <link rel="alternate" type="application/rss+xml" title="Global African Storybook Project" href="https://global-asp.github.io//feed.xml" />
 </head>
 
 
