--- a/stories/ja/0009_猫ちゃんはどこですか.html
+++ b/stories/ja/0009_猫ちゃんはどこですか.html
@@ -46,14 +46,14 @@ Clare Verbeek, Thembani Dladla, Zanele Buthelezi<br>日本語</div>
 
 <p><img src="https://global-asp.github.io/img/0009/04.jpg" /></p>
 
-<p>戸棚の上ですか。</p>
+<p>とだなの上ですか。</p>
 
 <div class="pagenum">3</div>
 <p style="page-break-after: always;"></p>
 
 <p><img src="https://global-asp.github.io/img/0009/05.jpg" /></p>
 
-<p>ソファの後ろですか。</p>
+<p>ソファーの後ろですか。</p>
 
 <div class="pagenum">4</div>
 <p style="page-break-after: always;"></p>
