--- a/stories/ja/0009_猫ちゃんはどこですか_slides.html
+++ b/stories/ja/0009_猫ちゃんはどこですか_slides.html
@@ -115,7 +115,7 @@
 <section class="slide level1">
 
 <p><img src="https://global-asp.github.io/img/0009/04.jpg" /></p>
-<p>戸棚の上ですか。</p>
+<p>とだなの上ですか。</p>
 <center>
 <strong>3</strong>
 </center>
@@ -124,7 +124,7 @@
 <section class="slide level1">
 
 <p><img src="https://global-asp.github.io/img/0009/05.jpg" /></p>
-<p>ソファの後ろですか。</p>
+<p>ソファーの後ろですか。</p>
 <center>
 <strong>4</strong>
 </center>
