add Nepali and other updates

--- a/stories/es/0008_qué-estás-haciendo_slides.html
+++ b/stories/es/0008_qué-estás-haciendo_slides.html
@@ -9,7 +9,7 @@
   /* A section is a slide. It's size is 800x600, and this will never change */
   section {
       font-family: Arial, serif;
-      font-size: 20pt;
+      font-size: 14pt;
       text-align: center;
     }
   address, blockquote, dl, fieldset, form, h1, h2, h3, h4, h5, h6, hr, ol, p, pre, table, ul, dl { padding: 10px 20px 10px 20px; }
@@ -21,7 +21,7 @@
     margin: 10px 10px 10px 50px;
   }
   img {
-    width: 60%;
+    width: 40%;
   }
   .license {
     font-size: small;
@@ -106,7 +106,7 @@
 <section class="slide level1">
 
 <p><img src="https://global-asp.github.io/img/0008/03.jpg" /></p>
-<p>Ella está despidiendose.</p>
+<p>Está despidiendose.</p>
 <center>
 <strong>2</strong>
 </center>
@@ -124,7 +124,7 @@
 <section class="slide level1">
 
 <p><img src="https://global-asp.github.io/img/0008/05.jpg" /></p>
-<p>Ella está estirando sus brazos.</p>
+<p>Está estirando sus brazos.</p>
 <center>
 <strong>4</strong>
 </center>
@@ -133,7 +133,7 @@
 <section class="slide level1">
 
 <p><img src="https://global-asp.github.io/img/0008/06.jpg" /></p>
-<p>Él está llamando.</p>
+<p>Está llamando.</p>
 <center>
 <strong>5</strong>
 </center>
@@ -151,7 +151,7 @@
 <section class="slide level1">
 
 <p><img src="https://global-asp.github.io/img/0008/08.jpg" /></p>
-<p>Ella está escuchando.</p>
+<p>Está escuchando.</p>
 <center>
 <strong>7</strong>
 </center>
