--- a/stories/ja/0008_なにしてるの.html
+++ b/stories/ja/0008_なにしてるの.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Qué estás haciendo?</title>
+    <title>なにしてるの？</title>
     <meta charset="UTF-8"><style type="text/css">
       body {
         font-family: sans-serif;
@@ -29,67 +29,67 @@
   <body>
 <div class='cover'><img src="https://global-asp.github.io/img/0008/01.jpg" />
 
-<h1 id="qu-ests-haciendo">Qué estás haciendo?</h1>
+<h1 id="section">なにしてるの？</h1>
 
-Nina Orange<br>Español</div>
+Nina Orange<br>日本語</div>
 
 <p><img src="https://global-asp.github.io/img/0008/02.jpg" /></p>
 
-<p>Estoy cantando.</p>
+<p>歌を歌っている。</p>
 
 <div class="pagenum">1</div>
 <p style="page-break-after: always;"></p>
 
 <p><img src="https://global-asp.github.io/img/0008/03.jpg" /></p>
 
-<p>Está despidiendose.</p>
+<p>手を振っている。</p>
 
 <div class="pagenum">2</div>
 <p style="page-break-after: always;"></p>
 
 <p><img src="https://global-asp.github.io/img/0008/04.jpg" /></p>
 
-<p>Estoy aplaudiendo.</p>
+<p>手を叩いている。</p>
 
 <div class="pagenum">3</div>
 <p style="page-break-after: always;"></p>
 
 <p><img src="https://global-asp.github.io/img/0008/05.jpg" /></p>
 
-<p>Está estirando sus brazos.</p>
+<p>手を伸ばしている。</p>
 
 <div class="pagenum">4</div>
 <p style="page-break-after: always;"></p>
 
 <p><img src="https://global-asp.github.io/img/0008/06.jpg" /></p>
 
-<p>Está llamando.</p>
+<p>彼は呼んでいる。</p>
 
 <div class="pagenum">5</div>
 <p style="page-break-after: always;"></p>
 
 <p><img src="https://global-asp.github.io/img/0008/07.jpg" /></p>
 
-<p>Estoy respondiendo.</p>
+<p>私は答えている。</p>
 
 <div class="pagenum">6</div>
 <p style="page-break-after: always;"></p>
 
 <p><img src="https://global-asp.github.io/img/0008/08.jpg" /></p>
 
-<p>Está escuchando.</p>
+<p>彼女は聞いている。</p>
 
 <div class="pagenum">7</div>
 <p style="page-break-after: always;"></p>
 
 <p><img src="https://global-asp.github.io/img/0008/09.jpg" /></p>
 
-<p>Qué estás haciendo?</p>
+<p>なにしてるの？</p>
 
 <div class="pagenum">8</div>
 <p style="page-break-after: always;"></p>
 
-<p>Writer: Nina Orange<br />Illustrations: Wiehan de Jager<br />Translation: dohliam<br />Language: Spanish</p>
+<p>Writer: Nina Orange<br />Illustrations: Wiehan de Jager<br />Translation: dohliam<br />Language: Japanese</p>
 <p>This story is brought to you by the <a href="https://global-asp.github.io/">Global African Storybook Project</a>, an effort to translate the stories of the <a href="http://africanstorybook.org/">African Storybook Project</a> into all the languages of the world.<p>You can view the original story on the ASP website <a href="http://africanstorybook.org/stories/what-are-you-doing">here</a>
 <p><a href="https://global-asp.github.io"><img src="https://global-asp.github.io/logo.png" alt="Global ASP logo" border="0" /></a>
 </p></p></p>
