--- a/stories/no/0204_akatope_slides.html
+++ b/stories/no/0204_akatope_slides.html
@@ -87,18 +87,17 @@
 </head>
 <body>
 
-<section id="阿南西和智慧" class="slide level1">
-<h1>阿南西和智慧</h1>
-<p>（加纳民间故事）</p>
+<section id="akatope" class="slide level1">
+<h1>Akatope</h1>
 <center>
-<img src="https://global-asp.github.io/img/0006/01.jpg" />
+<img src="https://global-asp.github.io/img/0204/01.jpg" />
 </center>
 
 </section>
 <section class="slide level1">
 
-<p><img src="https://global-asp.github.io/img/0006/02.jpg" /></p>
-<p>很久很久以前，人们什么都不知道。 他们不知道怎么耕田织布，也不知道怎么制造铁器。 天上的尼亚美神把世界所有的智慧都藏在一个沙锅里面。</p>
+<p><img src="https://global-asp.github.io/img/0204/02.jpg" /></p>
+<p>Det var en gang en gammel kvinne som alltid hadde ønsket å få et barn.</p>
 <center>
 <strong>1</strong>
 </center>
@@ -106,8 +105,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://global-asp.github.io/img/0006/03.jpg" /></p>
-<p>有一天，尼亚美决定把藏有智慧的沙锅交给蜘蛛神阿南西。 每当阿南西揭开沙锅看进去，他就会学到新的东西，真的很兴奋！</p>
+<p><img src="https://global-asp.github.io/img/0204/03.jpg" /></p>
+<p>Kvinnen tok den beste leirjorda hun kunne finne og begynte å lage en jente.</p>
 <center>
 <strong>2</strong>
 </center>
@@ -115,8 +114,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://global-asp.github.io/img/0006/04.jpg" /></p>
-<p>贪心的阿南西跟自己说， “我把沙锅安放在树顶上，那样所有的智慧都只属于我的！” 所以，他织出了一条长长的丝线，把沙锅牢牢地拴住，然后把丝线的另一端系在自己的肚子上。 他开始爬上那棵树， 可是沙锅老撞到他的腿，爬起来很辛苦。</p>
+<p><img src="https://global-asp.github.io/img/0204/04.jpg" /></p>
+<p>Jenta som var laget av leire ble til en ekte menneskejente.</p>
 <center>
 <strong>3</strong>
 </center>
@@ -124,8 +123,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://global-asp.github.io/img/0006/05.jpg" /></p>
-<p>阿南西的儿子从树底下什么都看到了。 他跟阿南西说，“把沙锅扛在背上不就容易了吗？” 于是阿南西就试着把沙锅抗在背上，果然容易很多。</p>
+<p><img src="https://global-asp.github.io/img/0204/05.jpg" /></p>
+<p>Den gamle kvinnen var veldig glad. Hun kalte jenta Akatope. Hun var veldig glad i Akatope.</p>
 <center>
 <strong>4</strong>
 </center>
@@ -133,8 +132,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://global-asp.github.io/img/0006/06.jpg" /></p>
-<p>阿南西很快就爬到树顶上。 可是他突然想到一个问题： “拥有所有智慧的人应该是我，可是刚才我儿子居然比我还聪明！” 阿南西气得差点跳起来了，一气之下竟把沙锅扔到树下。</p>
+<p><img src="https://global-asp.github.io/img/0204/06.jpg" /></p>
+<p>Akatope ble advart av sin gamle mor om at hun ikke måtte komme ut av hytta, men hun hørte ikke etter. Hver gang moren ikke var klar over det, snek AKatope seg ut for å leke med de andre barna.</p>
 <center>
 <strong>5</strong>
 </center>
@@ -142,8 +141,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://global-asp.github.io/img/0006/07.jpg" /></p>
-<p>沙锅一落地就碎成小片。 沙锅碎了，所有的智慧也跑出来了，让大家自由分享。 就是这样，世界的人民才学会如何耕田、如何织布，如何打铁做铁器，还有所有现在人会做的一切。</p>
+<p><img src="https://global-asp.github.io/img/0204/07.jpg" /></p>
+<p>En dag da Akatope var ute og lekte med de andre barna, begynte det å regne kraftig.</p>
 <center>
 <strong>6</strong>
 </center>
@@ -151,12 +150,84 @@
 </section>
 <section class="slide level1">
 
-<h2 id="阿南西和智慧-1">阿南西和智慧</h2>
-Writer: Ghanaian folktale<br> Illustrations: Wiehan de Jager<br> Translation: dohliam<br> Language: Chinese (Mandarin)<br>
+<p><img src="https://global-asp.github.io/img/0204/08.jpg" /></p>
+<p>De andre barna løp til hyttene sine, men da Akatope løp til sin, begynte beina hennes å gå i oppløsning. Hun krøk seg sammen mellom buskene.</p>
+<center>
+<strong>7</strong>
+</center>
+
+</section>
+<section class="slide level1">
+
+<p><img src="https://global-asp.github.io/img/0204/09.jpg" /></p>
+<p>De andre barna fortalte foreldrene sine hva som hadde hendt med Akapope. De var lei seg og sjokkerte.</p>
+<center>
+<strong>8</strong>
+</center>
+
+</section>
+<section class="slide level1">
+
+<p><img src="https://global-asp.github.io/img/0204/10.jpg" /></p>
+<p>Da den gamle kvinnen hørte hva some hadde hendt barnet hennes, gråt hun i flere dager. Landsbyboerne bestemte seg for å ta med seg en annen liten jente som hadde blitt foreldreløs til å ta Akatopes plass.</p>
+<center>
+<strong>9</strong>
+</center>
+
+</section>
+<section class="slide level1">
+
+<p><img src="https://global-asp.github.io/img/0204/11.jpg" /></p>
+<p>Men det var ikke nødvendig. En stor overraskelse ventet den gamle damen!</p>
+<center>
+<strong>10</strong>
+</center>
+
+</section>
+<section class="slide level1">
+
+<p><img src="https://global-asp.github.io/img/0204/12.jpg" /></p>
+<p>Få dager etter at den foreldreløse jenta hadde blitt ønsket velkommen i den gamle damens hjem, banket det på døra.</p>
+<center>
+<strong>11</strong>
+</center>
+
+</section>
+<section class="slide level1">
+
+<p><img src="https://global-asp.github.io/img/0204/13.jpg" /></p>
+<p>&quot;Hvem kan det være,&quot; undret den gamle damen. Da hun åpnet døra var hun fra seg av begeistring.</p>
+<center>
+<strong>12</strong>
+</center>
+
+</section>
+<section class="slide level1">
+
+<p><img src="https://global-asp.github.io/img/0204/14.jpg" /></p>
+<p>Akatope hadde kommet hjem. Men hun var trøtt og syk.</p>
+<center>
+<strong>13</strong>
+</center>
+
+</section>
+<section class="slide level1">
+
+<p><img src="https://global-asp.github.io/img/0204/15.jpg" /></p>
+<p>Akatopes gamle mor solgte alt hun eide. HUn brukte pengene til å behandle Akatope. Akatope vokste opp til å bli den vakreste jenta i landsbyen.</p>
+<center>
+<strong>14</strong>
+</center>
+
+</section>
+<section class="slide level1">
+
+<h2 id="akatope-1">Akatope</h2>
+Writer: Alice Kapolondo<br> Illustrations: Catherine Groenewald, Microsoft Clip Art and Wiehan de Jager<br> Translation: Espen Stranger-Johannessen<br> Language: Norwegian<br>
 <p>
 This story is brought to you by the <a href='https://global-asp.github.io/'>Global African Storybook Project</a>, an effort to translate the stories of the <a href='http://africanstorybook.org/'>African Storybook Project</a> into all the languages of the world.
 <p>
-You can view the original story on the ASP website <a href='http://africanstorybook.org/stories/anansi-and-wisdom'>here</a>
+You can view the original story on the ASP website <a href='http://africanstorybook.org/stories/akatope'>here</a>
 <p><div class="license">
 <a href="https://global-asp.github.io"><img src="https://global-asp.github.io/logo.png" alt="Global ASP logo" border="0" /></a>
 </div>
