--- a/stories/yue/0078_超牛冒險記_slides.html
+++ b/stories/yue/0078_超牛冒險記_slides.html
@@ -87,18 +87,17 @@
 </head>
 <body>
 
-<section id="阿南西和智慧" class="slide level1">
-<h1>阿南西和智慧</h1>
-<p>（加纳民间故事）</p>
+<section id="超牛冒險記" class="slide level1">
+<h1>超牛冒險記</h1>
 <center>
-<img src="https://global-asp.github.io/img/0006/01.jpg" />
+<img src="https://global-asp.github.io/img/0078/01.jpg" />
 </center>
 
 </section>
 <section class="slide level1">
 
-<p><img src="https://global-asp.github.io/img/0006/02.jpg" /></p>
-<p>很久很久以前，人们什么都不知道。 他们不知道怎么耕田织布，也不知道怎么制造铁器。 天上的尼亚美神把世界所有的智慧都藏在一个沙锅里面。</p>
+<p><img src="https://global-asp.github.io/img/0078/02.jpg" /></p>
+<p>呢個係阿牛。</p>
 <center>
 <strong>1</strong>
 </center>
@@ -106,8 +105,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://global-asp.github.io/img/0006/03.jpg" /></p>
-<p>有一天，尼亚美决定把藏有智慧的沙锅交给蜘蛛神阿南西。 每当阿南西揭开沙锅看进去，他就会学到新的东西，真的很兴奋！</p>
+<p><img src="https://global-asp.github.io/img/0078/03.jpg" /></p>
+<p>阿牛好有型！</p>
 <center>
 <strong>2</strong>
 </center>
@@ -115,8 +114,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://global-asp.github.io/img/0006/04.jpg" /></p>
-<p>贪心的阿南西跟自己说， “我把沙锅安放在树顶上，那样所有的智慧都只属于我的！” 所以，他织出了一条长长的丝线，把沙锅牢牢地拴住，然后把丝线的另一端系在自己的肚子上。 他开始爬上那棵树， 可是沙锅老撞到他的腿，爬起来很辛苦。</p>
+<p><img src="https://global-asp.github.io/img/0078/04.jpg" /></p>
+<p>日頭係普普通通嘅小牛。</p>
 <center>
 <strong>3</strong>
 </center>
@@ -124,8 +123,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://global-asp.github.io/img/0006/05.jpg" /></p>
-<p>阿南西的儿子从树底下什么都看到了。 他跟阿南西说，“把沙锅扛在背上不就容易了吗？” 于是阿南西就试着把沙锅抗在背上，果然容易很多。</p>
+<p><img src="https://global-asp.github.io/img/0078/05.jpg" /></p>
+<p>放紙鷂。</p>
 <center>
 <strong>4</strong>
 </center>
@@ -133,8 +132,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://global-asp.github.io/img/0006/06.jpg" /></p>
-<p>阿南西很快就爬到树顶上。 可是他突然想到一个问题： “拥有所有智慧的人应该是我，可是刚才我儿子居然比我还聪明！” 阿南西气得差点跳起来了，一气之下竟把沙锅扔到树下。</p>
+<p><img src="https://global-asp.github.io/img/0078/06.jpg" /></p>
+<p>踢波。</p>
 <center>
 <strong>5</strong>
 </center>
@@ -142,8 +141,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://global-asp.github.io/img/0006/07.jpg" /></p>
-<p>沙锅一落地就碎成小片。 沙锅碎了，所有的智慧也跑出来了，让大家自由分享。 就是这样，世界的人民才学会如何耕田、如何织布，如何打铁做铁器，还有所有现在人会做的一切。</p>
+<p><img src="https://global-asp.github.io/img/0078/07.jpg" /></p>
+<p>夜晚就變成超牛！</p>
 <center>
 <strong>6</strong>
 </center>
@@ -151,18 +150,63 @@
 </section>
 <section class="slide level1">
 
-<h2 id="阿南西和智慧-1">阿南西和智慧</h2>
-Writer: Ghanaian folktale<br> Illustrations: Wiehan de Jager<br> Translation: dohliam<br> Language: Chinese (Mandarin)<br>
+<p><img src="https://global-asp.github.io/img/0078/08.jpg" /></p>
+<p>救人……</p>
+<center>
+<strong>7</strong>
+</center>
+
+</section>
+<section class="slide level1">
+
+<p><img src="https://global-asp.github.io/img/0078/09.jpg" /></p>
+<p>打擊衰人。</p>
+<center>
+<strong>8</strong>
+</center>
+
+</section>
+<section class="slide level1">
+
+<p><img src="https://global-asp.github.io/img/0078/10.jpg" /></p>
+<p>但係如果你眯埋雙眼，許個願……</p>
+<center>
+<strong>9</strong>
+</center>
+
+</section>
+<section class="slide level1">
+
+<p><img src="https://global-asp.github.io/img/0078/11.jpg" /></p>
+<p>阿牛可能都會嚟探你㗎！</p>
+<center>
+<strong>10</strong>
+</center>
+
+</section>
+<section class="slide level1">
+
+<p><img src="https://global-asp.github.io/img/0078/12.jpg" /></p>
+<p>終。</p>
+<center>
+<strong>11</strong>
+</center>
+
+</section>
+<section class="slide level1">
+
+<h2 id="超牛冒險記-1">超牛冒險記</h2>
+Writer: Danielle Bruckert<br> Illustrations: Danielle Bruckert<br> Translation: dohliam<br> Language: Chinese (Mandarin)<br>
 <p>
 This story is brought to you by the <a href='https://global-asp.github.io/'>Global African Storybook Project</a>, an effort to translate the stories of the <a href='http://africanstorybook.org/'>African Storybook Project</a> into all the languages of the world.
 <p>
-You can view the original story on the ASP website <a href='http://africanstorybook.org/stories/anansi-and-wisdom'>here</a>
+You can view the original story on the ASP website <a href='http://africanstorybook.org/stories/adventures-supercow'>here</a>
 <p><div class="license">
 <a href="https://global-asp.github.io"><img src="https://global-asp.github.io/logo.png" alt="Global ASP logo" border="0" /></a>
 </div>
 
 <p><center><div class="license">
-<a rel="license" href="http://creativecommons.org/licenses/by/3.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by/3.0/88x31.png" /></a><br />This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by/3.0/">Creative Commons Attribution 3.0 Unported License</a>.
+<a rel="license" href="http://creativecommons.org/licenses/by-nc/3.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by-nc/3.0/88x31.png" /></a><br />This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-nc/3.0/">Creative Commons Attribution-NonCommercial 3.0 Unported License</a>.
 </div></center>
 
 
