--- a/stories/ja/0008_なにしてるの_slides.html
+++ b/stories/ja/0008_なにしてるの_slides.html
@@ -87,18 +87,17 @@
 </head>
 <body>
 
-<section id="阿南西和智慧" class="slide level1">
-<h1>阿南西和智慧</h1>
-<p>（加纳民间故事）</p>
+<section id="なにしてるの" class="slide level1">
+<h1>なにしてるの？</h1>
 <center>
-<img src="https://global-asp.github.io/img/0006/01.jpg" />
+<img src="https://global-asp.github.io/img/0008/01.jpg" />
 </center>
 
 </section>
 <section class="slide level1">
 
-<p><img src="https://global-asp.github.io/img/0006/02.jpg" /></p>
-<p>很久很久以前，人们什么都不知道。 他们不知道怎么耕田织布，也不知道怎么制造铁器。 天上的尼亚美神把世界所有的智慧都藏在一个沙锅里面。</p>
+<p><img src="https://global-asp.github.io/img/0008/02.jpg" /></p>
+<p>歌を歌っている。</p>
 <center>
 <strong>1</strong>
 </center>
@@ -106,8 +105,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://global-asp.github.io/img/0006/03.jpg" /></p>
-<p>有一天，尼亚美决定把藏有智慧的沙锅交给蜘蛛神阿南西。 每当阿南西揭开沙锅看进去，他就会学到新的东西，真的很兴奋！</p>
+<p><img src="https://global-asp.github.io/img/0008/03.jpg" /></p>
+<p>手を振っている。</p>
 <center>
 <strong>2</strong>
 </center>
@@ -115,8 +114,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://global-asp.github.io/img/0006/04.jpg" /></p>
-<p>贪心的阿南西跟自己说， “我把沙锅安放在树顶上，那样所有的智慧都只属于我的！” 所以，他织出了一条长长的丝线，把沙锅牢牢地拴住，然后把丝线的另一端系在自己的肚子上。 他开始爬上那棵树， 可是沙锅老撞到他的腿，爬起来很辛苦。</p>
+<p><img src="https://global-asp.github.io/img/0008/04.jpg" /></p>
+<p>手を叩いている。</p>
 <center>
 <strong>3</strong>
 </center>
@@ -124,8 +123,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://global-asp.github.io/img/0006/05.jpg" /></p>
-<p>阿南西的儿子从树底下什么都看到了。 他跟阿南西说，“把沙锅扛在背上不就容易了吗？” 于是阿南西就试着把沙锅抗在背上，果然容易很多。</p>
+<p><img src="https://global-asp.github.io/img/0008/05.jpg" /></p>
+<p>手を伸ばしている。</p>
 <center>
 <strong>4</strong>
 </center>
@@ -133,8 +132,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://global-asp.github.io/img/0006/06.jpg" /></p>
-<p>阿南西很快就爬到树顶上。 可是他突然想到一个问题： “拥有所有智慧的人应该是我，可是刚才我儿子居然比我还聪明！” 阿南西气得差点跳起来了，一气之下竟把沙锅扔到树下。</p>
+<p><img src="https://global-asp.github.io/img/0008/06.jpg" /></p>
+<p>彼は呼んでいる。</p>
 <center>
 <strong>5</strong>
 </center>
@@ -142,8 +141,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://global-asp.github.io/img/0006/07.jpg" /></p>
-<p>沙锅一落地就碎成小片。 沙锅碎了，所有的智慧也跑出来了，让大家自由分享。 就是这样，世界的人民才学会如何耕田、如何织布，如何打铁做铁器，还有所有现在人会做的一切。</p>
+<p><img src="https://global-asp.github.io/img/0008/07.jpg" /></p>
+<p>私は答えている。</p>
 <center>
 <strong>6</strong>
 </center>
@@ -151,12 +150,30 @@
 </section>
 <section class="slide level1">
 
-<h2 id="阿南西和智慧-1">阿南西和智慧</h2>
-Writer: Ghanaian folktale<br> Illustrations: Wiehan de Jager<br> Translation: dohliam<br> Language: Chinese (Mandarin)<br>
+<p><img src="https://global-asp.github.io/img/0008/08.jpg" /></p>
+<p>彼女は聞いている。</p>
+<center>
+<strong>7</strong>
+</center>
+
+</section>
+<section class="slide level1">
+
+<p><img src="https://global-asp.github.io/img/0008/09.jpg" /></p>
+<p>なにしてるの？</p>
+<center>
+<strong>8</strong>
+</center>
+
+</section>
+<section class="slide level1">
+
+<h2 id="なにしてるの-1">なにしてるの？</h2>
+Writer: Nina Orange<br> Illustrations: Wiehan de Jager<br> Translation: dohliam<br> Language: Japanese<br>
 <p>
 This story is brought to you by the <a href='https://global-asp.github.io/'>Global African Storybook Project</a>, an effort to translate the stories of the <a href='http://africanstorybook.org/'>African Storybook Project</a> into all the languages of the world.
 <p>
-You can view the original story on the ASP website <a href='http://africanstorybook.org/stories/anansi-and-wisdom'>here</a>
+You can view the original story on the ASP website <a href='http://africanstorybook.org/stories/what-are-you-doing'>here</a>
 <p><div class="license">
 <a href="https://global-asp.github.io"><img src="https://global-asp.github.io/logo.png" alt="Global ASP logo" border="0" /></a>
 </div>
