--- a/stories/ne/0294_हजूरआमा-र-केराको-जादू_slides.html
+++ b/stories/ne/0294_हजूरआमा-र-केराको-जादू_slides.html
@@ -87,18 +87,19 @@
 </head>
 <body>
 
-<section id="阿南西和智慧" class="slide level1">
-<h1>阿南西和智慧</h1>
-<p>（加纳民间故事）</p>
+<section id="हजरआम-र-करक-जद" class="slide level1">
+<h1>हजूरआमा र केराको जादू</h1>
 <center>
-<img src="https://global-asp.github.io/img/0006/01.jpg" />
+<img src="https://global-asp.github.io/img/0294/01.jpg" />
 </center>
 
 </section>
 <section class="slide level1">
 
-<p><img src="https://global-asp.github.io/img/0006/02.jpg" /></p>
-<p>很久很久以前，人们什么都不知道。 他们不知道怎么耕田织布，也不知道怎么制造铁器。 天上的尼亚美神把世界所有的智慧都藏在一个沙锅里面。</p>
+<p><img src="https://global-asp.github.io/img/0294/02.jpg" /></p>
+<p>हजूर आमाको करेसाबारीमा मकै, कोदो र तरुलको खेतीले टम्म भरिएको थियो। सबै भन्दा लोभलाग्दो चाहीँ केराहरु थियो ।</p>
+<p>हजूर आमाका धेरै नाति नातिनाहरु भएता पनि वहाँ मलाई नै मन पराउनु हुन्थ्यो। वहाँ प्राय जसो मलाई आफ्नो घरमा बोलाउनु हुन्थ्यो र आफ्नो केही गोप्य कुराहरु पनि खोल्नु हुन्थ्यो।</p>
+<p>तर वहाँले मलाई केरा कहाँ पकाउनु हुन्छ भन्ने कुरा चाहीँ गोप्य नै राखेकी थिईन ।</p>
 <center>
 <strong>1</strong>
 </center>
@@ -106,8 +107,9 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://global-asp.github.io/img/0006/03.jpg" /></p>
-<p>有一天，尼亚美决定把藏有智慧的沙锅交给蜘蛛神阿南西。 每当阿南西揭开沙锅看进去，他就会学到新的东西，真的很兴奋！</p>
+<p><img src="https://global-asp.github.io/img/0294/03.jpg" /></p>
+<p>एकदिन मैले हजूर आमाको घर बाहिर एउट ठूलो छ्वालीको टोकरी घाममा सुकाई राखेको देखें। जब मैले यो के को लागि हो भनेर सोधें, वहाँको जवाफ थियो: यो मेरो जादू को टोकरी हो। टोकरी को छेउमा हजूर आमाले त्यहाँ धेरै केराका पातहरु ओल्टाई पल्टाई गर्नु हुन्थ्यो।</p>
+<p>म उत्सुकताले भरिएर सोधें, यी पातहरु के का लागि हजूर आमा? वहाँको केवल जवाफ थियो: यिनीहरू मेरा जादूमयी पातहरू हुन ।</p>
 <center>
 <strong>2</strong>
 </center>
@@ -115,8 +117,9 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://global-asp.github.io/img/0006/04.jpg" /></p>
-<p>贪心的阿南西跟自己说， “我把沙锅安放在树顶上，那样所有的智慧都只属于我的！” 所以，他织出了一条长长的丝线，把沙锅牢牢地拴住，然后把丝线的另一端系在自己的肚子上。 他开始爬上那棵树， 可是沙锅老撞到他的腿，爬起来很辛苦。</p>
+<p><img src="https://global-asp.github.io/img/0294/04.jpg" /></p>
+<p>हजूर आमालाई देखेर मलाई धेरै रमाईलो लागिरहेको थियो अनि केरा, केराका पातहरु अनि छ्वालीको टोकरी। तर हजूर आमाले मलाई केही सामान लिन भनेर आमा कहाँ पठाई दिनु भयो। हजूर आमा ! तपाईं जसरी तयारी गर्दै हुनुहुन्छ नी ! मलाइ पनिदेखाउनु होस् न?</p>
+<p>जिद्धी नगर्नु, मैले जे भनें त्यही गर्नु हजूर आमा चिच्याईन, त्यसपछि मैले त्यहाँबाट दौडिनु पर्‍यो।</p>
 <center>
 <strong>3</strong>
 </center>
@@ -124,8 +127,10 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://global-asp.github.io/img/0006/05.jpg" /></p>
-<p>阿南西的儿子从树底下什么都看到了。 他跟阿南西说，“把沙锅扛在背上不就容易了吗？” 于是阿南西就试着把沙锅抗在背上，果然容易很多。</p>
+<p><img src="https://global-asp.github.io/img/0294/05.jpg" /></p>
+<p>जब म फर्के हजूर आमा बाहिर बसिराख्नु भएको थियो तर त्यहाँ न त टोकरी नै थियो, न त केराहरु नै।</p>
+<p>हजूर आमा टोकरी र केराहरु कहाँ छन्?</p>
+<p>तर वहाँको मात्र जवाफ थियो, त्यो सबै जादूमयी ठाउँमा छन् । वास्तवमा त्यो साह्रै नै दुखदायी क्षण थियो।</p>
 <center>
 <strong>4</strong>
 </center>
@@ -133,8 +138,10 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://global-asp.github.io/img/0006/06.jpg" /></p>
-<p>阿南西很快就爬到树顶上。 可是他突然想到一个问题： “拥有所有智慧的人应该是我，可是刚才我儿子居然比我还聪明！” 阿南西气得差点跳起来了，一气之下竟把沙锅扔到树下。</p>
+<p><img src="https://global-asp.github.io/img/0294/06.jpg" /></p>
+<p>दुई दिन पछि, हजूर आमाले मलाई आफ्नो खाटबाट वहाँको टेक्ने लौरो ल्याउन भन्नु भयो।</p>
+<p>जब मैले ढोका खोले, पाक्दै गरेको केराको कडा वासनाले मलाई आकार्शित गर्‍यो।</p>
+<p>भित्री कोठामा हजूर आमाको छ्वालीको ठूलो टोकरी थियो जसलाई एउटा पुरानो सिरकले घ्वाप्लक्क छोपेको थियो। त्यसलाई मैले विस्तारै उचालेँ र त्यो लोभ लाग्दो वासनालाई सुघेँ।</p>
 <center>
 <strong>5</strong>
 </center>
@@ -142,8 +149,10 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://global-asp.github.io/img/0006/07.jpg" /></p>
-<p>沙锅一落地就碎成小片。 沙锅碎了，所有的智慧也跑出来了，让大家自由分享。 就是这样，世界的人民才学会如何耕田、如何织布，如何打铁做铁器，还有所有现在人会做的一切。</p>
+<p><img src="https://global-asp.github.io/img/0294/07.jpg" /></p>
+<p>जब मेरी हजूर आमा मलाई, त्यहाँ तिमी के गर्दै छौ भनेर कराईन: म झसँङ्ग भएर तर्से। छिटो गर! मेरो लौरो लिएर आउ। वहाँको टेक्ने लौरो लिएर म छिटो छिटो वहाँ भएको ठाउँमा गएँ।</p>
+<p>तिमी किन मुस्कुराई रहेकी छौ? हजूर आमाले मलाई सोध्नु भयो।</p>
+<p>वहाँको प्रश्नले मैले वहाँको जादूमयी ठाउँको रहस्य पत्ता लागेकोमा निस्केको हल्का हाँसो हो भन्ने कुरोको अनुभूती गर्न गाह्रो भएन।</p>
 <center>
 <strong>6</strong>
 </center>
@@ -151,12 +160,50 @@
 </section>
 <section class="slide level1">
 
-<h2 id="阿南西和智慧-1">阿南西和智慧</h2>
-Writer: Ghanaian folktale<br> Illustrations: Wiehan de Jager<br> Translation: dohliam<br> Language: Chinese (Mandarin)<br>
+<p><img src="https://global-asp.github.io/img/0294/08.jpg" /></p>
+<p>अर्को दिन जब हजूर आमा मेरी आमालाई भेट्न आउनु भयो , म हतार हतार वहाँको घरमा फेरी एक चोटी केराहरु हेर्न को लागि गएँ ।</p>
+<p>त्यहाँ एउटा राम्रोसँग पाकेको एउटा झुप्प थियो । मैले एउटा टिपेर आफ्नो कपडा भित्र लुकाएँ । फेरी टोकारीलाई राम्रोसँग छोपिसके पछि म घरको पछाडी गएँ अनि त्यसलाई छिटो छिटो खाएँ । त्यो नै अहिले सम्म मैले चाखेकी सबै भन्दा गुलियो केरा थियो ।</p>
+<center>
+<strong>7</strong>
+</center>
+
+</section>
+<section class="slide level1">
+
+<p><img src="https://global-asp.github.io/img/0294/09.jpg" /></p>
+<p>अर्को दिन जब हजूर आमा करेसाबारीमा सागसब्जी टिप्दै थिईन, मैले ढोका बाट झ्वाट्ट चियाएर केराहरू हेरे । प्राय सबै राम्रोसँग पाकेको थियो । त्यहाँबाट चार वटाको एउटा झुप्प नलिईकन म चल्नै सकिनँ । जब म बिस्तारै ढोका तर्फ अगाडी बढ़ें , मैले बाहिर मेरी हजूर आमाले खोकेको सुनें । मैले केरा आफ्नो कपडा मूनी छोपेर बिस्तारै हजूर आमालाई छलेर अघि बढ़े।</p>
+<center>
+<strong>8</strong>
+</center>
+
+</section>
+<section class="slide level1">
+
+<p><img src="https://global-asp.github.io/img/0294/10.jpg" /></p>
+<p>दोस्रो दिन हाटबजार लाग्ने दिन थियो, हजूर आमा बिहानै उठिन. वहाँ सधै पाकेको केरा र तरुलहरु लिएर बजारमा बेच्न जानु हुन्थ्यो ।</p>
+<p>त्यो दिन मैले वहाँ लाई भेट्न जान हतार गरिनँ। तर लामो समयसम्म त्यसो गरिरहन पनि मलाई सम्भव थिएन ।</p>
+<center>
+<strong>9</strong>
+</center>
+
+</section>
+<section class="slide level1">
+
+<p><img src="https://global-asp.github.io/img/0294/11.jpg" /></p>
+<p>त्यसपछि साँझमा आमा, बुबा र हजूर आमाले मलाई बोलाउनु भयो । किन हो भन्ने कुरा मलाई थाहा पाउन गाह्रो भएन । त्यो रात जब म आफ्नो ओछ्यानमा पल्टें, मलाई थाहा थियो कि म अब कहिल्यै हजूर आमा, आमा, बुवा र कसैबाट पनि चोर्न सक्ने छैन ।</p>
+<center>
+<strong>10</strong>
+</center>
+
+</section>
+<section class="slide level1">
+
+<h2 id="हजरआम-र-करक-जद-1">हजूरआमा र केराको जादू</h2>
+Writer: Ursula Nafula<br> Illustrations: Catherine Groenewald<br> Translation: Dhan Lama<br> Language: Nepali<br>
 <p>
 This story is brought to you by the <a href='https://global-asp.github.io/'>Global African Storybook Project</a>, an effort to translate the stories of the <a href='http://africanstorybook.org/'>African Storybook Project</a> into all the languages of the world.
 <p>
-You can view the original story on the ASP website <a href='http://africanstorybook.org/stories/anansi-and-wisdom'>here</a>
+You can view the original story on the ASP website <a href='http://africanstorybook.org/stories/grandma%E2%80%99s-bananas'>here</a>
 <p><div class="license">
 <a href="https://global-asp.github.io"><img src="https://global-asp.github.io/logo.png" alt="Global ASP logo" border="0" /></a>
 </div>
