fix slides +corrections

--- a/stories/yue/0003_校服.html
+++ b/stories/yue/0003_校服.html
@@ -8,6 +8,9 @@
         font-size: large;
         text-align: center;
       }
+      img {
+        max-width: 40%;
+      }
       .license {
         display: inline-block;
         font-size: small;
@@ -60,7 +63,7 @@ Clare Verbeek, Thembani Dladla, Zanele Buthelezi<br>粵語</div>
 
 <p><img src="https://global-asp.github.io/img/0003/06.jpg" /></p>
 
-<p>呢頂帽子太小啦。</p>
+<p>呢頂帽仔太細啦。</p>
 
 <div class="pagenum">5</div>
 <p style="page-break-after: always;"></p>
@@ -81,7 +84,7 @@ Clare Verbeek, Thembani Dladla, Zanele Buthelezi<br>粵語</div>
 
 <p><img src="https://global-asp.github.io/img/0003/09.jpg" /></p>
 
-<p>……好啱我著。</p>
+<p>……好啱著。</p>
 
 <div class="pagenum">8</div>
 <p style="page-break-after: always;"></p>
