--- a/stories/yue/0003_校服_slides.html
+++ b/stories/yue/0003_校服_slides.html
@@ -9,7 +9,7 @@
   /* A section is a slide. It's size is 800x600, and this will never change */
   section {
       font-family: Arial, serif;
-      font-size: 20pt;
+      font-size: 14pt;
       text-align: center;
     }
   address, blockquote, dl, fieldset, form, h1, h2, h3, h4, h5, h6, hr, ol, p, pre, table, ul, dl { padding: 10px 20px 10px 20px; }
@@ -21,7 +21,7 @@
     margin: 10px 10px 10px 50px;
   }
   img {
-    width: 60%;
+    width: 40%;
   }
   .license {
     font-size: small;
@@ -133,7 +133,7 @@
 <section class="slide level1">
 
 <p><img src="https://global-asp.github.io/img/0003/06.jpg" /></p>
-<p>呢頂帽子太小啦。</p>
+<p>呢頂帽仔太細啦。</p>
 <center>
 <strong>5</strong>
 </center>
@@ -160,7 +160,7 @@
 <section class="slide level1">
 
 <p><img src="https://global-asp.github.io/img/0003/09.jpg" /></p>
-<p>……好啱我著。</p>
+<p>……好啱著。</p>
 <center>
 <strong>8</strong>
 </center>
