--- a/stories/yue/0078_超牛冒險記.html
+++ b/stories/yue/0078_超牛冒險記.html
@@ -31,86 +31,79 @@
 
 <h1 id="section">超牛冒險記</h1>
 
-Danielle Bruckert<br>中文</div>
+Danielle Bruckert<br>粵語</div>
 
 <p><img src="https://global-asp.github.io/img/0078/02.jpg" /></p>
 
-<p>呢個係阿牛。</p>
+<p>呢個係阿牛。阿牛好有型！</p>
 
 <div class="pagenum">1</div>
 <p style="page-break-after: always;"></p>
 
 <p><img src="https://global-asp.github.io/img/0078/03.jpg" /></p>
 
-<p>阿牛好有型！</p>
+<p>日頭係普普通通嘅小牛。</p>
 
 <div class="pagenum">2</div>
 <p style="page-break-after: always;"></p>
 
 <p><img src="https://global-asp.github.io/img/0078/04.jpg" /></p>
 
-<p>日頭係普普通通嘅小牛。</p>
+<p>放紙鷂。</p>
 
 <div class="pagenum">3</div>
 <p style="page-break-after: always;"></p>
 
 <p><img src="https://global-asp.github.io/img/0078/05.jpg" /></p>
 
-<p>放紙鷂。</p>
+<p>踢波。</p>
 
 <div class="pagenum">4</div>
 <p style="page-break-after: always;"></p>
 
 <p><img src="https://global-asp.github.io/img/0078/06.jpg" /></p>
 
-<p>踢波。</p>
+<p>夜晚就變成超牛！</p>
 
 <div class="pagenum">5</div>
 <p style="page-break-after: always;"></p>
 
 <p><img src="https://global-asp.github.io/img/0078/07.jpg" /></p>
 
-<p>夜晚就變成超牛！</p>
+<p>救人……</p>
 
 <div class="pagenum">6</div>
 <p style="page-break-after: always;"></p>
 
 <p><img src="https://global-asp.github.io/img/0078/08.jpg" /></p>
 
-<p>救人……</p>
+<p>打擊衰人。</p>
 
 <div class="pagenum">7</div>
 <p style="page-break-after: always;"></p>
 
 <p><img src="https://global-asp.github.io/img/0078/09.jpg" /></p>
 
-<p>打擊衰人。</p>
+<p>但係如果你眯埋雙眼，許個願……</p>
 
 <div class="pagenum">8</div>
 <p style="page-break-after: always;"></p>
 
 <p><img src="https://global-asp.github.io/img/0078/10.jpg" /></p>
 
-<p>但係如果你眯埋雙眼，許個願……</p>
+<p>阿牛可能都會嚟探你㗎！</p>
 
 <div class="pagenum">9</div>
 <p style="page-break-after: always;"></p>
 
 <p><img src="https://global-asp.github.io/img/0078/11.jpg" /></p>
 
-<p>阿牛可能都會嚟探你㗎！</p>
+<p>終。</p>
 
 <div class="pagenum">10</div>
 <p style="page-break-after: always;"></p>
 
-<p><img src="https://global-asp.github.io/img/0078/12.jpg" /></p>
-
-<p>終。</p>
-
-<div class="pagenum">11</div>
-<p style="page-break-after: always;"></p>
-
-<p>Writer: Danielle Bruckert<br />Illustrations: Danielle Bruckert<br />Translation: dohliam<br />Language: Chinese (Mandarin)</p>
+<p>Writer: Danielle Bruckert<br />Illustrations: Danielle Bruckert<br />Translation: dohliam<br />Language: Cantonese</p>
 <p>This story is brought to you by the <a href="https://global-asp.github.io/">Global African Storybook Project</a>, an effort to translate the stories of the <a href="http://africanstorybook.org/">African Storybook Project</a> into all the languages of the world.<p>You can view the original story on the ASP website <a href="http://africanstorybook.org/stories/adventures-supercow">here</a>
 <p><a href="https://global-asp.github.io"><img src="https://global-asp.github.io/logo.png" alt="Global ASP logo" border="0" /></a>
 </p></p></p>
