--- a/stories/yue/0078_超牛冒險記_slides.html
+++ b/stories/yue/0078_超牛冒險記_slides.html
@@ -97,7 +97,7 @@
 <section class="slide level1">
 
 <p><img src="https://global-asp.github.io/img/0078/02.jpg" /></p>
-<p>呢個係阿牛。</p>
+<p>呢個係阿牛。阿牛好有型！</p>
 <center>
 <strong>1</strong>
 </center>
@@ -106,7 +106,7 @@
 <section class="slide level1">
 
 <p><img src="https://global-asp.github.io/img/0078/03.jpg" /></p>
-<p>阿牛好有型！</p>
+<p>日頭係普普通通嘅小牛。</p>
 <center>
 <strong>2</strong>
 </center>
@@ -115,7 +115,7 @@
 <section class="slide level1">
 
 <p><img src="https://global-asp.github.io/img/0078/04.jpg" /></p>
-<p>日頭係普普通通嘅小牛。</p>
+<p>放紙鷂。</p>
 <center>
 <strong>3</strong>
 </center>
@@ -124,7 +124,7 @@
 <section class="slide level1">
 
 <p><img src="https://global-asp.github.io/img/0078/05.jpg" /></p>
-<p>放紙鷂。</p>
+<p>踢波。</p>
 <center>
 <strong>4</strong>
 </center>
@@ -133,7 +133,7 @@
 <section class="slide level1">
 
 <p><img src="https://global-asp.github.io/img/0078/06.jpg" /></p>
-<p>踢波。</p>
+<p>夜晚就變成超牛！</p>
 <center>
 <strong>5</strong>
 </center>
@@ -142,7 +142,7 @@
 <section class="slide level1">
 
 <p><img src="https://global-asp.github.io/img/0078/07.jpg" /></p>
-<p>夜晚就變成超牛！</p>
+<p>救人……</p>
 <center>
 <strong>6</strong>
 </center>
@@ -151,7 +151,7 @@
 <section class="slide level1">
 
 <p><img src="https://global-asp.github.io/img/0078/08.jpg" /></p>
-<p>救人……</p>
+<p>打擊衰人。</p>
 <center>
 <strong>7</strong>
 </center>
@@ -160,7 +160,7 @@
 <section class="slide level1">
 
 <p><img src="https://global-asp.github.io/img/0078/09.jpg" /></p>
-<p>打擊衰人。</p>
+<p>但係如果你眯埋雙眼，許個願……</p>
 <center>
 <strong>8</strong>
 </center>
@@ -169,7 +169,7 @@
 <section class="slide level1">
 
 <p><img src="https://global-asp.github.io/img/0078/10.jpg" /></p>
-<p>但係如果你眯埋雙眼，許個願……</p>
+<p>阿牛可能都會嚟探你㗎！</p>
 <center>
 <strong>9</strong>
 </center>
@@ -178,7 +178,7 @@
 <section class="slide level1">
 
 <p><img src="https://global-asp.github.io/img/0078/11.jpg" /></p>
-<p>阿牛可能都會嚟探你㗎！</p>
+<p>終。</p>
 <center>
 <strong>10</strong>
 </center>
@@ -186,17 +186,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://global-asp.github.io/img/0078/12.jpg" /></p>
-<p>終。</p>
-<center>
-<strong>11</strong>
-</center>
-
-</section>
-<section class="slide level1">
-
 <h2 id="超牛冒險記-1">超牛冒險記</h2>
-Writer: Danielle Bruckert<br> Illustrations: Danielle Bruckert<br> Translation: dohliam<br> Language: Chinese (Mandarin)<br>
+Writer: Danielle Bruckert<br> Illustrations: Danielle Bruckert<br> Translation: dohliam<br> Language: Cantonese<br>
 <p>
 This story is brought to you by the <a href='https://global-asp.github.io/'>Global African Storybook Project</a>, an effort to translate the stories of the <a href='http://africanstorybook.org/'>African Storybook Project</a> into all the languages of the world.
 <p>
