--- a/stories/yue/0001_一個好高嘅人.html
+++ b/stories/yue/0001_一個好高嘅人.html
@@ -8,6 +8,9 @@
         font-size: large;
         text-align: center;
       }
+      img {
+        max-width: 40%;
+      }
       .license {
         display: inline-block;
         font-size: small;
