--- a/stories/yue/0006_阿南西與智慧_slides.html
+++ b/stories/yue/0006_阿南西與智慧_slides.html
@@ -87,18 +87,18 @@
 </head>
 <body>
 
-<section id="找水" class="slide level1">
-<h1>找水</h1>
-<p>(青蛙喜欢凉水。)</p>
+<section id="阿南西與智慧" class="slide level1">
+<h1>阿南西與智慧</h1>
+<p>（加納民間故事）</p>
 <center>
-<img src="https://global-asp.github.io/img/0007/01.jpg" />
+<img src="https://global-asp.github.io/img/0006/01.jpg" />
 </center>
 
 </section>
 <section class="slide level1">
 
-<p><img src="https://global-asp.github.io/img/0007/02.jpg" /></p>
-<p>哪儿有水呢？</p>
+<p><img src="https://global-asp.github.io/img/0006/02.jpg" /></p>
+<p>好耐好耐之前，人類乜都不識。 佢哋唔識點耕田織布，亦都唔識點做鐵嘢。 因為天上嘅尼亞美神將世界所有智慧都柄埋响個瓦煲入便。</p>
 <center>
 <strong>1</strong>
 </center>
@@ -106,8 +106,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://global-asp.github.io/img/0007/03.jpg" /></p>
-<p>锅子里有水。</p>
+<p><img src="https://global-asp.github.io/img/0006/03.jpg" /></p>
+<p>有日，尼亞美決定將智慧瓦煲交畀蜘蛛神阿南西。 每次阿南西打開瓦煲睇入去，佢就會學到新嘢，真係好興奮！</p>
 <center>
 <strong>2</strong>
 </center>
@@ -115,8 +115,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://global-asp.github.io/img/0007/04.jpg" /></p>
-<p>太热了！</p>
+<p><img src="https://global-asp.github.io/img/0006/04.jpg" /></p>
+<p>貪心嘅阿南西同自己講， “我將瓦煲擺响樹頂上便，噉樣所有嘅智慧都剩係屬於我嘅！” 所以，佢織咗條長長嘅絲線出嚟，將瓦煲纊實，然後將絲線另外一端綁住响自己個肚度。 佢開始擒上嗰樖樹， 但係瓦煲成日撞到自己隻腳，擒起上嚟好辛苦。</p>
 <center>
 <strong>3</strong>
 </center>
@@ -124,8 +124,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://global-asp.github.io/img/0007/05.jpg" /></p>
-<p>这水会冷吗？</p>
+<p><img src="https://global-asp.github.io/img/0006/05.jpg" /></p>
+<p>阿南西個仔由樹底下乜都見到晒啦。 佢同阿南西講，“將瓦煲孭住喺背脊上面咪就更加容易吖嗎？” 於是乎阿南西就孭起咗個瓦煲，果然容易好多。</p>
 <center>
 <strong>4</strong>
 </center>
@@ -133,12 +133,30 @@
 </section>
 <section class="slide level1">
 
-<h2 id="找水-1">找水</h2>
-Writer: Augustine Napagi<br> Illustrations: Hélder de Paz Alexandre<br> Translation: dohliam<br> Language: Chinese (Mandarin)<br>
+<p><img src="https://global-asp.github.io/img/0006/06.jpg" /></p>
+<p>阿南西好快就爬到樹頂上。 但係佢突然諗到一個問題： “世界所有嘅智慧而家應該係屬於我嘅啦，但係頭先我個仔竟然叻過我嘞喎！” 阿南西激到爭啲跳起上嚟，佢嬲到竟然將個瓦煲掟到地下。</p>
+<center>
+<strong>5</strong>
+</center>
+
+</section>
+<section class="slide level1">
+
+<p><img src="https://global-asp.github.io/img/0006/07.jpg" /></p>
+<p>瓦煲一落地就碎成千幾小片。 瓦煲打爛咗，世界所有嘅智慧亦都走咗出嚟，等大家自由分享。 就係噉，世界嘅人民先至學識點耕田、點織布，點打鐵做鐵器，仲有所有而家啲人識做嘅一切。</p>
+<center>
+<strong>6</strong>
+</center>
+
+</section>
+<section class="slide level1">
+
+<h2 id="阿南西與智慧-1">阿南西與智慧</h2>
+Writer: Ghanaian folktale<br> Illustrations: Wiehan de Jager<br> Translation: dohliam<br> Language: Cantonese<br>
 <p>
 This story is brought to you by the <a href='https://global-asp.github.io/'>Global African Storybook Project</a>, an effort to translate the stories of the <a href='http://africanstorybook.org/'>African Storybook Project</a> into all the languages of the world.
 <p>
-You can view the original story on the ASP website <a href='http://africanstorybook.org/stories/looking-water'>here</a>
+You can view the original story on the ASP website <a href='http://africanstorybook.org/stories/anansi-and-wisdom'>here</a>
 <p><div class="license">
 <a href="https://global-asp.github.io"><img src="https://global-asp.github.io/logo.png" alt="Global ASP logo" border="0" /></a>
 </div>
