--- a/stories/yue/0008_你做緊乜嘢.html
+++ b/stories/yue/0008_你做緊乜嘢.html
@@ -8,6 +8,9 @@
         font-size: large;
         text-align: center;
       }
+      img {
+        max-width: 40%;
+      }
       .license {
         display: inline-block;
         font-size: small;
