--- a/stories/yue/0009_我隻小貓貓喺邊度.html
+++ b/stories/yue/0009_我隻小貓貓喺邊度.html
@@ -8,6 +8,9 @@
         font-size: large;
         text-align: center;
       }
+      img {
+        max-width: 40%;
+      }
       .license {
         display: inline-block;
         font-size: small;
