--- a/stories/zh/0007_找水.html
+++ b/stories/zh/0007_找水.html
@@ -8,6 +8,9 @@
         font-size: large;
         text-align: center;
       }
+      img {
+        max-width: 40%;
+      }
       .license {
         display: inline-block;
         font-size: small;
