--- a/stories/zh/0147_我和我的家人.html
+++ b/stories/zh/0147_我和我的家人.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>==我和我的家人==</title>
+    <title>我和我的家人</title>
     <meta charset="UTF-8"><style type="text/css">
       body {
         font-family: sans-serif;
@@ -29,37 +29,77 @@
   <body>
 <div class='cover'><img src="https://global-asp.github.io/img/0147/01.jpg" />
 
-<p>==我和我的家人==</p>
+<h1 id="section">我和我的家人</h1>
+
+Waako Joshua and Cornelius Gulere<br>中文</div>
+
+<p><img src="https://global-asp.github.io/img/0147/02.jpg" /></p>
 
 <p>我和我的恐龙一起看天上的鸟。</p>
 
+<div class="pagenum">1</div>
+<p style="page-break-after: always;"></p>
+
+<p><img src="https://global-asp.github.io/img/0147/03.jpg" /></p>
+
 <p>我和我的鸟在树上见到黑猩猩。</p>
+
+<div class="pagenum">2</div>
+<p style="page-break-after: always;"></p>
+
+<p><img src="https://global-asp.github.io/img/0147/04.jpg" /></p>
 
 <p>我和我的黑猩猩跟在山上和长颈鹿一起玩。</p>
 
+<div class="pagenum">3</div>
+<p style="page-break-after: always;"></p>
+
+<p><img src="https://global-asp.github.io/img/0147/05.jpg" /></p>
+
 <p>我和我的长颈鹿一起用泥土做猴子小球。</p>
+
+<div class="pagenum">4</div>
+<p style="page-break-after: always;"></p>
+
+<p><img src="https://global-asp.github.io/img/0147/06.jpg" /></p>
 
 <p>我和我的猴子跟大猩猩一起吃香蕉。</p>
 
+<div class="pagenum">5</div>
+<p style="page-break-after: always;"></p>
+
+<p><img src="https://global-asp.github.io/img/0147/07.jpg" /></p>
+
 <p>我的大猩猩和猴子怕乌龟。</p>
+
+<div class="pagenum">6</div>
+<p style="page-break-after: always;"></p>
+
+<p><img src="https://global-asp.github.io/img/0147/08.jpg" /></p>
 
 <p>我和乌龟一起陪蛇慢慢回家。</p>
 
+<div class="pagenum">7</div>
+<p style="page-break-after: always;"></p>
+
+<p><img src="https://global-asp.github.io/img/0147/09.jpg" /></p>
+
 <p>蛇和我最喜欢发出嘶嘶声或在湖边唱歌。</p>
+
+<div class="pagenum">8</div>
+<p style="page-break-after: always;"></p>
+
+<p><img src="https://global-asp.github.io/img/0147/10.jpg" /></p>
 
 <p>我和我全家住在一起很幸福！</p>
 
-<p>–</p>
+<div class="pagenum">9</div>
+<p style="page-break-after: always;"></p>
 
-<p>License: [CC-BY]
-Writer: Waako Joshua and Cornelius Gulere
-Illustration: Wiehan de Jager
-Translation: dohliam
-Language: zh</p>
-Waako Joshua and Cornelius Gulere<br>中文</div>
-
-
-
+<p>Writer: Waako Joshua and Cornelius Gulere<br />Illustrations: Wiehan de Jager<br />Translation: dohliam<br />Language: Chinese (Mandarin)</p>
+<p>This story is brought to you by the <a href="https://global-asp.github.io/">Global African Storybook Project</a>, an effort to translate the stories of the <a href="http://africanstorybook.org/">African Storybook Project</a> into all the languages of the world.<p>You can view the original story on the ASP website <a href="http://africanstorybook.org/stories/my-family-and-i">here</a>
+<p><a href="https://global-asp.github.io"><img src="https://global-asp.github.io/logo.png" alt="Global ASP logo" border="0" /></a>
+</p></p></p>
 
 
 <div class="license"><a rel="license" href="http://creativecommons.org/licenses/by/3.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by/3.0/88x31.png" /></a><br />This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by/3.0/">Creative Commons Attribution 3.0 Unported License</a>.</div>
