--- a/stories/zh/0147_我和我的家人_slides.html
+++ b/stories/zh/0147_我和我的家人_slides.html
@@ -87,26 +87,105 @@
 </head>
 <body>
 
-<section class="slide level6">
-
-<p>==我和我的家人==</p>
-<p>我和我的恐龙一起看天上的鸟。</p>
-<p>我和我的鸟在树上见到黑猩猩。</p>
-<p>我和我的黑猩猩跟在山上和长颈鹿一起玩。</p>
-<p>我和我的长颈鹿一起用泥土做猴子小球。</p>
-<p>我和我的猴子跟大猩猩一起吃香蕉。</p>
-<p>我的大猩猩和猴子怕乌龟。</p>
-<p>我和乌龟一起陪蛇慢慢回家。</p>
-<p>蛇和我最喜欢发出嘶嘶声或在湖边唱歌。</p>
-<p>我和我全家住在一起很幸福！</p>
-<p>--</p>
-License: [CC-BY] Writer: Waako Joshua and Cornelius Gulere Illustration: Wiehan de Jager Translation: dohliam Language: zh
+<section id="我和我的家人" class="slide level1">
+<h1>我和我的家人</h1>
 <center>
 <img src="https://global-asp.github.io/img/0147/01.jpg" />
 </center>
 
 </section>
-<section class="slide level6">
+<section class="slide level1">
+
+<p><img src="https://global-asp.github.io/img/0147/02.jpg" /></p>
+<p>我和我的恐龙一起看天上的鸟。</p>
+<center>
+<strong>1</strong>
+</center>
+
+</section>
+<section class="slide level1">
+
+<p><img src="https://global-asp.github.io/img/0147/03.jpg" /></p>
+<p>我和我的鸟在树上见到黑猩猩。</p>
+<center>
+<strong>2</strong>
+</center>
+
+</section>
+<section class="slide level1">
+
+<p><img src="https://global-asp.github.io/img/0147/04.jpg" /></p>
+<p>我和我的黑猩猩跟在山上和长颈鹿一起玩。</p>
+<center>
+<strong>3</strong>
+</center>
+
+</section>
+<section class="slide level1">
+
+<p><img src="https://global-asp.github.io/img/0147/05.jpg" /></p>
+<p>我和我的长颈鹿一起用泥土做猴子小球。</p>
+<center>
+<strong>4</strong>
+</center>
+
+</section>
+<section class="slide level1">
+
+<p><img src="https://global-asp.github.io/img/0147/06.jpg" /></p>
+<p>我和我的猴子跟大猩猩一起吃香蕉。</p>
+<center>
+<strong>5</strong>
+</center>
+
+</section>
+<section class="slide level1">
+
+<p><img src="https://global-asp.github.io/img/0147/07.jpg" /></p>
+<p>我的大猩猩和猴子怕乌龟。</p>
+<center>
+<strong>6</strong>
+</center>
+
+</section>
+<section class="slide level1">
+
+<p><img src="https://global-asp.github.io/img/0147/08.jpg" /></p>
+<p>我和乌龟一起陪蛇慢慢回家。</p>
+<center>
+<strong>7</strong>
+</center>
+
+</section>
+<section class="slide level1">
+
+<p><img src="https://global-asp.github.io/img/0147/09.jpg" /></p>
+<p>蛇和我最喜欢发出嘶嘶声或在湖边唱歌。</p>
+<center>
+<strong>8</strong>
+</center>
+
+</section>
+<section class="slide level1">
+
+<p><img src="https://global-asp.github.io/img/0147/10.jpg" /></p>
+<p>我和我全家住在一起很幸福！</p>
+<center>
+<strong>9</strong>
+</center>
+
+</section>
+<section class="slide level1">
+
+<h2 id="我和我的家人-1">我和我的家人</h2>
+Writer: Waako Joshua and Cornelius Gulere<br> Illustrations: Wiehan de Jager<br> Translation: dohliam<br> Language: Chinese (Mandarin)<br>
+<p>
+This story is brought to you by the <a href='https://global-asp.github.io/'>Global African Storybook Project</a>, an effort to translate the stories of the <a href='http://africanstorybook.org/'>African Storybook Project</a> into all the languages of the world.
+<p>
+You can view the original story on the ASP website <a href='http://africanstorybook.org/stories/my-family-and-i'>here</a>
+<p><div class="license">
+<a href="https://global-asp.github.io"><img src="https://global-asp.github.io/logo.png" alt="Global ASP logo" border="0" /></a>
+</div>
 
 <p><center><div class="license">
 <a rel="license" href="http://creativecommons.org/licenses/by/3.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by/3.0/88x31.png" /></a><br />This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by/3.0/">Creative Commons Attribution 3.0 Unported License</a>.
